# Simple-matrix-operations

./: CMakeLists.txt  README.md  main.cpp
Libs/Matrix/: CMakeLists.txt
Libs/Matrix/Inc/: Matrix.hpp
Libs/Matrix/Src/: Matrix.cpp
Libs/Matrix_tools/: CMakeLists.txt
Libs/Matrix_tools/Inc/: Matrix_tools.hpp
Libs/Matrix_tools/Src/: Matrix_tools.cpp
